<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="craig.com.calculator.MainActivity">

    <GridLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:columnCount="5"
        android:columnOrderPreserved="false"
        android:rowCount="6"
        android:rowOrderPreserved="false">

        <TextView
            android:id="@+id/input_text"
            android:layout_width="match_parent"
            android:layout_height="15dp"
            android:layout_column="0"
            android:layout_columnSpan="5"
            android:layout_gravity="fill_horizontal"
            android:layout_row="0"
            android:layout_rowWeight="1"
            android:autoSizeMaxTextSize="100sp"
            android:autoSizeMinTextSize="12sp"
            android:autoSizeStepGranularity="2sp"
            android:autoSizeTextType="uniform" />

        <Button
            android:id="@+id/mem_clear_button"
            android:layout_column="0"
            android:layout_row="1"
            android:layout_rowWeight="1"
            android:onClick="memoryClear"
            android:text="@string/mem_clear_button_text" />

        <Button
            android:id="@+id/mem_recall_button"
            android:layout_column="1"
            android:layout_row="1"
            android:layout_rowWeight="1"
            android:onClick="memoryRecall"
            android:text="@string/mem_recall_button_text" />

        <Button
            android:id="@+id/mem_add_button"
            android:layout_column="2"
            android:layout_row="1"
            android:layout_rowWeight="1"
            android:onClick="memoryAdd"
            android:text="@string/mem_add_button_text" />


        <Button
            android:id="@+id/mem_subtract_button"
            android:layout_column="3"
            android:layout_row="1"
            android:layout_rowWeight="1"
            android:onClick="memorySubtract"
            android:text="@string/mem_subtract_button_text" />

        <Button
            android:id="@+id/mem_store_button"
            android:layout_column="4"
            android:layout_row="1"
            android:layout_rowWeight="1"
            android:onClick="memoryStore"
            android:text="@string/mem_store_button_text" />

        <Button
            android:id="@+id/equeals_button"
            android:layout_column="4"
            android:layout_gravity="fill_vertical"
            android:layout_row="2"
            android:layout_rowSpan="2"
            android:onClick="equals"
            android:text="@string/equals_button_text" />

        <Button
            android:id="@+id/divide_button"
            android:layout_column="0"
            android:layout_row="2"
            android:layout_rowWeight="1"
            android:onClick="divide"
            android:text="@string/divide_button_text" />

        <Button
            android:id="@+id/multiply_button"
            android:layout_column="1"
            android:layout_row="2"
            android:layout_rowWeight="1"
            android:onClick="multiply"
            android:text="@string/multiply_button_text" />

        <Button
            android:id="@+id/subtract_button"
            android:layout_column="2"
            android:layout_row="2"
            android:layout_rowWeight="1"
            android:onClick="subtract"
            android:text="@string/subtract_button_text" />

        <Button
            android:id="@+id/negate_button"
            android:layout_column="3"
            android:layout_rowWeight="1"
            android:layout_row="2"
            android:text="@string/negate_button_text"
            android:onClick="negate"/>

        <Button
            android:id="@+id/plus_button"
            android:layout_column="4"
            android:layout_gravity="fill_vertical"
            android:layout_row="4"
            android:layout_rowSpan="2"
            android:onClick="add"
            android:text="@string/plus_button_text" />

        <Button
            android:id="@+id/seven_button"
            android:layout_column="0"
            android:layout_row="3"
            android:layout_rowWeight="1"
            android:onClick="number"
            android:text="@string/seven_button_text" />

        <Button
            android:id="@+id/eight_button_text"
            android:layout_column="1"
            android:layout_row="3"
            android:layout_rowWeight="1"
            android:onClick="number"
            android:text="@string/eight_button_text" />

        <Button
            android:id="@+id/nine_button"
            android:layout_column="2"
            android:layout_row="3"
            android:layout_rowWeight="1"
            android:onClick="number"
            android:text="@string/nine_button_text" />

        <Button
            android:id="@+id/clear_entry_button"
            android:layout_column="3"
            android:layout_row="3"
            android:layout_rowWeight="1"
            android:onClick="clearEntry"
            android:text="@string/clear_entry_button_text" />


        <Button
            android:id="@+id/four_button"
            android:layout_column="0"
            android:layout_row="4"
            android:layout_rowWeight="1"
            android:onClick="number"
            android:text="@string/four_button__text" />

        <Button
            android:id="@+id/five_button"
            android:layout_column="1"
            android:layout_row="4"
            android:layout_rowWeight="1"
            android:onClick="number"
            android:text="@string/five_button_text" />

        <Button
            android:id="@+id/six_button"
            android:layout_column="2"
            android:layout_row="4"
            android:layout_rowWeight="1"
            android:onClick="number"
            android:text="@string/six_button_text" />

        <Button
            android:id="@+id/clear_button"
            android:layout_column="3"
            android:layout_row="4"
            android:layout_rowWeight="1"
            android:text="@string/clear_button_text"
            android:onClick="clear"/>

        <Button
            android:id="@+id/one_button"
            android:layout_column="0"
            android:layout_row="5"
            android:layout_rowWeight="1"
            android:onClick="number"
            android:text="@string/one_button_text" />

        <Button
            android:id="@+id/two_button"
            android:layout_column="1"
            android:layout_row="5"
            android:layout_rowWeight="1"
            android:onClick="number"
            android:text="@string/two_button_text" />

        <Button
            android:id="@+id/three_button"
            android:layout_column="2"
            android:layout_row="5"
            android:layout_rowWeight="1"
            android:onClick="number"
            android:text="@string/three_button_text" />

        <Button
            android:id="@+id/decimal_button"
            android:layout_row="5"
            android:layout_column="3"
            android:layout_rowWeight="1"
            android:text="@string/decimal_button_text"
            android:onClick="decimal"/>

    </GridLayout>

</android.support.constraint.ConstraintLayout>
